syntax = "proto3";

package v1;

import weak "google/api/annotations.proto";
import "api/v1/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "v1";

message UsageRequest {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
}

message SecuredResourcesMetrics {
  int32 nodes = 1;
  int32 cores = 2;
}

message UsageResponse {
  message UsageRecord {
    google.protobuf.Timestamp ts = 1;
    SecuredResourcesMetrics metrics = 2;
  }
  repeated UsageRecord record = 1;
}

message UsageMaxResponse {
  google.protobuf.Timestamp nodes_ts = 1;
  int32 nodes = 2;
  google.protobuf.Timestamp cores_ts = 3;
  int32 cores = 4;
}

service UsageService {
  rpc GetMetrics(UsageRequest) returns (UsageResponse) {
    option (google.api.http) = {get: "/v1/usage"};
  }
  rpc GetMax(UsageRequest) returns (UsageMaxResponse) {
    option (google.api.http) = {get: "/v1/usage/max"};
  }
  rpc GetCurrent(v1.Empty) returns (UsageResponse.UsageRecord) {
    option (google.api.http) = {get: "/v1/usage/current"};
  }
}
